--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/material-top-tabs": "^5.0.1",
     "native-base": "^2.13.8",
     "react": "16.9.0",
@@ -17,6 +18,8 @@
     "react-native-gesture-handler": "^1.5.6",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.2",
+    "react-native-screens": "^2.0.0-beta.2",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
