--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-safe-area-context": "^0.7.2",
     "react-native-screens": "^2.0.0-beta.2",
     "react-native-tab-view": "^2.13.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^2.1.1",
